--- a/app/src/main/res/layout/fragment_themes.xml
+++ b/app/src/main/res/layout/fragment_themes.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/themeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,13 +26,13 @@
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_marginTop="40dp"
+            android:buttonTint="@color/colorActive"
             android:elevation="30dp"
             android:text="@string/selfStartStr"
             android:textCursorDrawable="?android:attr/textCursorDrawable"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/action_theme"
-            android:buttonTint="@color/colorActive" />
+            app:layout_constraintTop_toBottomOf="@+id/action_theme" />
 
     <Spinner
             android:id="@+id/drop_down"
