--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,6 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <!-- Customize your theme here. -->
-
         <item name="colorActive">@color/colorActive</item>
         <item name="colorInactive">@color/colorInactive</item>
 
@@ -17,9 +15,12 @@
         <item name="bottomOffClockText">@color/bottomOffClockText</item>
     </style>
 
+    <!--    Tab Layout-->
     <style name="TabLayoutFontSize" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">20sp</item>
     </style>
+
+    <!--    Splash Theme-->
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
