changed divider color TimePicker to ActiveColor

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
+
+    <style name="MyAppTheme.NumberPicker" parent="AppTheme">
+        <item name="colorControlNormal"> @color/colorActive </item>
+    </style>
 </resources>
