--- a/app/src/main/res/layout/time_picker_widget.xml
+++ b/app/src/main/res/layout/time_picker_widget.xml
@@ -49,7 +49,7 @@
                 android:layout_marginStart="5dip"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                />
+                android:theme="@style/MyAppTheme.NumberPicker" />
 
         <!-- seconds -->
         <NumberPicker
@@ -59,7 +59,7 @@
                 android:layout_marginStart="5dip"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                />
+                android:theme="@style/MyAppTheme.NumberPicker" />
 
     </LinearLayout>
 
