New ThemesFragment Layout / warning: all previous logic has been removed from themesFragment.kt in this branch, and needs to be linked up to new layout

--- a/app/src/main/res/layout/fragment_themes.xml
+++ b/app/src/main/res/layout/fragment_themes.xml
@@ -1,69 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/themeLayout"
+        android:id="@+id/layout_themes_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-            android:id="@+id/action_theme"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
-            android:background="@drawable/theme_btn_background"
-            android:elevation="30dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:text="@string/switchDarkStr"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    <CheckBox
-            android:id="@+id/self_start_check"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_marginTop="40dp"
-            android:buttonTint="@color/colorActive"
-            android:elevation="30dp"
-            android:text="@string/selfStartStr"
-            android:textCursorDrawable="?android:attr/textCursorDrawable"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/action_theme" />
-
-    <Spinner
-            android:id="@+id/drop_down"
+    <RelativeLayout
+            android:id="@+id/darkModeSwitch"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/drop_down_background"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:popupBackground="@drawable/popup_background"
-            android:spinnerMode="dropdown"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent" />
-
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/soundMenuPicker"
+            app:layout_constraintTop_toTopOf="parent">
     <TextView
-            android:id="@+id/drop_down_text"
-            android:layout_width="0dp"
+            android:layout_alignParentLeft="true"
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
-            android:elevation="30dp"
-            android:gravity="center"
-            android:textColor="@color/bottomClockText"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:text="Dark mode"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/bottomClockText"/>
 
+    <Switch
+            android:layout_alignParentRight="true"
+            android:textAlignment="viewEnd"
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+    </RelativeLayout>
+
+    <LinearLayout
+            android:id="@+id/soundMenuPicker"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/themes_list_view"
+            app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch">
+        <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:text="Sounds"
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/bottomClockText"/>
+
+        <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="25dp"
+                android:layout_height="20dp"
+                android:textSize="12sp"
+                android:text="Material" />
+    </LinearLayout>
+
+    <ListView
+            android:id="@+id/themes_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:entries="@array/themesArrayList"
+            android:divider="@color/colorInactive"
+            android:dividerHeight="1dp"
+            android:listSelector="@color/colorActive"
+            android:clickable="true"
+            style="@style/ListViewCells"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/soundMenuPicker" >
+
+    </ListView>
 </android.support.constraint.ConstraintLayout>
