fixed some layout issues in themesFragment, added animation on click soundPicker

--- a/app/src/main/res/layout/fragment_themes.xml
+++ b/app/src/main/res/layout/fragment_themes.xml
@@ -7,45 +7,58 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
+    <android.support.constraint.ConstraintLayout
+            android:id="@+id/top_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/themes_list_view"
+            app:layout_constraintTop_toTopOf="parent">
     <RelativeLayout
             android:id="@+id/darkModeSwitch"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal"
             android:gravity="center_vertical"
-            app:layout_constraintBottom_toBottomOf="@+id/soundMenuPicker"
-            app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorInactive">
-    <TextView
-            android:layout_alignParentLeft="true"
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Dark mode"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/topClockText"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/soundMenuPicker"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="10dp"
+                android:text="Dark mode"
+                android:textColor="@color/topClockText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
         <Switch
                 android:id="@+id/switch1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:layout_marginRight="25dp"
                 android:textAlignment="viewEnd"
                 android:theme="@style/Switch"/>
+
     </RelativeLayout>
 
     <LinearLayout
             android:id="@+id/soundMenuPicker"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/themes_list_view"
-            app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch"
-            android:background="@color/colorInactive"
-            >
+            android:gravity="center_vertical"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?attr/selectableItemBackground"
+            app:layout_constraintBottom_toTopOf="@+id/tv_themes"
+            app:layout_constraintTop_toBottomOf="@+id/darkModeSwitch">
+        <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorActive"></TableRow>
         <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
@@ -59,13 +72,37 @@
         <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_marginLeft="25dp"
+                android:layout_marginLeft="12dp"
                 android:layout_height="30dp"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:text="Material" />
     </LinearLayout>
+<LinearLayout
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/soundMenuPicker"
+        android:id="@+id/tv_themes"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
+    <TableRow
+            android:gravity="top"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorActive"></TableRow>
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+            android:text="Themes"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/topClockText"
+            android:textSize="20sp"
+            android:textStyle="bold"></TextView>
+</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
     <ListView
+
             android:id="@+id/themes_list_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -76,7 +113,7 @@
             android:clickable="true"
             style="@style/ListViewCells"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/soundMenuPicker" >
+            app:layout_constraintTop_toBottomOf="@+id/top_layout" >
 
     </ListView>
 </android.support.constraint.ConstraintLayout>
