--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,7 @@
         <item name="android:textSize">40sp</item>
     </style>
     <style name="Switch" parent="AppTheme">
-        <item name="colorControlActivated">@color/colorActive</item>
+        <item name="android:colorControlActivated">@color/colorActive</item>
+        <item name="colorSwitchThumbNormal">@color/colorActive</item>
     </style>
 </resources>
